# multisig

./: .ammanrc.js  .gitignore  .gitmodules  Anchor.toml  Cargo.toml  Goki suggestions.txt  LICENSE  README.md  build.sh  deploy.sh  package-lock.json  package.json  tsconfig.json
app/: .env.local  .env.local.example  .gitignore  README.md  next.config.js  package-lock.json  package.json  solana-wallet-v2.0.0.tgz  tsconfig.json
app/public/: main.css
app/src/actions/: approveAndTryExecutingTransaction.ts  approveTransaction.ts  createSmartWallet.ts  createWalletConnectClient.ts  executeTransaction.ts
app/src/components/: AccountCard.tsx  AccountPicker.tsx  AccountSelectCard.tsx  ContentContainer.tsx  Layout.tsx  Modal.tsx  Navigation.tsx  PageHeader.tsx  (+14 more)
lib/TxInterpreter/: .gitignore  multisig-multisig-tx-0.3.2.tgz  package-lock.json  package.json  tsconfig.json
migrations/: deploy.js
programs/multisig/: Cargo.toml
programs/partial-signer/: Cargo.toml
programs/partial-signer/src/: instructions.rs  lib.rs  seeds.rs  state.rs
programs/partial-signer/src/instructions/: add_partial_signers.rs  freeze_partial_signer_set.rs  init_partial_signer_set.rs  invoke_signed.rs
programs/partial-signer/src/state/: partial_signer_set.rs
programs/transaction-loader/: Cargo.toml
programs/transaction-loader/src/: instructions.rs  lib.rs  seeds.rs
programs/transaction-loader/src/instructions/: close_transaction.rs  create_transaction.rs  governance_insert_transaction.rs  insert_instruction.rs
programs/transaction-loader/src/state/: transaction.rs
tests/: multisig.ts
(+101 files in other folders)
