[package]
name = "transaction_loader"
version = "0.1.0"
description = "Load transaction data into an account while being mindful of size limits."
homepage = "https://bastion.community"
repository = "https://github.com/bastion-multisig/multisig"
authors = ["Tristyn Stimpson <tristynstimpson@gmail.com>"]
license = "AGPL-3.0"
edition = "2021"
keywords = ["solana", "bastion", "multisig", "anchor"]

[lib]
crate-type = ["cdylib", "lib"]
name = "transaction_loader"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.25.0"
anchor-spl = "0.25.0"
bytemuck = "^1.9.1"
spl-governance = { git = "https://github.com/bastion-multisig/solana-program-library", features = ["no-entrypoint"] }

